# komikman

./: .gitignore  CMakeLists.txt  README.md  conanfile.py
data/: CMakeLists.txt  com.github.hellokartikey.komikman.desktop
src/: CMakeLists.txt  archive.cpp  archive.hpp  backend.cpp  backend.hpp  cbz.cpp  cbz.hpp  chapter.cpp  chapter.hpp  config.cpp  config.hpp  entry.cpp  entry.hpp  image.cpp  image.hpp  library.cpp  library.hpp  main.cpp
src/qml/: ChapterView.qml  Chapters.qml  ChaptersPage.qml  CoverImage.qml  Entry.qml  EntryData.qml  EntryDelegate.qml  EntryPage.qml  Main.qml  Reader.qml  Settings.qml
src/qml/delegates/: EntryData.qml
